--- a/frontend/src/app/pages/events/event-page/components/opportunity-request-footer/opportunity-request-footer.component.scss
+++ b/frontend/src/app/pages/events/event-page/components/opportunity-request-footer/opportunity-request-footer.component.scss
@@ -37,7 +37,7 @@
 
 @media (min-width: 768px) {
   .event-footer.visible {
-    height: 80px;
+    height: 84px;
   }
 
   .text {
@@ -52,5 +52,6 @@
     line-height: 1.21053;
     letter-spacing: 0.007em;
     padding: 6px 24px;
+    height: 48px;
   }
 }
